# soundPulse

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Procfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
api/: config.py  database.py  dependencies.py  main.py
build kit/: BUILD_PLAYBOOK.md  SoundPulse_Executive_Summary.docx  SoundPulse_Executive_Summary.md  SoundPulse_PRD_v2.md
build-prompts/: API_CREDENTIALS_GUIDE.md  API_DOCS_HIGH_LEVEL.md  API_DOCS_LOW_LEVEL.md  CLAUDE_CODE_CREDENTIALS_PROMPT.md  CLAUDE_CODE_FRONTEND_PROMPT.md  CLAUDE_CODE_GENRE_CLASSIFIER_PROMPT.md  CLAUDE_CODE_GENRE_TAXONOMY_PROMPT.md  CLAUDE_CODE_PREDICTION_TESTING_PROMPT.md  CLAUDE_CODE_PROMPT.md  CLAUDE_CODE_SCRAPERS_PROMPT.md  README.md
chartmetric_ingest/: __init__.py  endpoints.py  fetch_log.py  fetcher.py  global_bucket.py  handlers.py  priority.py  queue.py  quota.py  runner.py
config/: .env.example  llm.json  model.json  scoring.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
ml/: ensemble.py  features.py  predictor.py  train.py  trainer.py
planning/: NEXT_SESSION_START_HERE.md  OVERNIGHT_STATUS_2026-04-13.md  input.md  lessons.md  output.md  schema.md  task_decom.md  tasks.md
scrapers/: apple_music.py  base.py  celery_app.py  chartmetric.py  chartmetric_artist_stats.py  chartmetric_artist_tracks.py  chartmetric_artists.py  chartmetric_audio_features.py  chartmetric_deep_us.py  chartmetric_historical_replay.py  chartmetric_playlist_crawler.py  chartmetric_track_history.py  fallback.py  health.py  (+13 more)
(+291 files in other folders)
